--- a/config/services.yaml
+++ b/config/services.yaml
@@ -17,7 +17,8 @@ services:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
-            - '../src/Entity/'
+            - '../src/**/Entity/'
+            - '../src/*/Application/Message'
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
